@@ -1,5 +1,5 @@
 transferstatisticsalup=[${pos,2}] ${user,-12} ${tagline,-24} ${upfiles,5} ${upbytes,11} ${uprate,8}
-transferstatisticsaldn=[${pos,2}] ${user,-12} ${tagline,-24} ${upfiles,5} ${dnbytes,11} ${dnrate,8}
+transferstatisticsaldn=[${pos,2}] ${user,-12} ${tagline,-24} ${dnfiles,5} ${dnbytes,11} ${dnrate,8}
 transferstatisticsmonthup=[${pos,2}] ${user,-12} ${tagline,-24} ${upfilesmonth,5} ${upbytesmonth,11} ${upratemonth,8}
 transferstatisticsmonthdn=[${pos,2}] ${user,-12} ${tagline,-24} ${dnfilesmonth,5} ${dnbytesmonth,11} ${dnratemonth,8}
 transferstatisticswkup=[${pos,2}] ${user,-12} ${tagline,-24} ${upfilesweek,5} ${upbytesweek,11} ${uprateweek,8}
